glf90w.h

extern int const glf90w_mouse_button_1;
extern int const glf90w_mouse_button_2;
extern int const glf90w_mouse_button_3;
extern int const glf90w_mouse_button_4;
extern int const glf90w_mouse_button_5;
extern int const glf90w_mouse_button_6;
extern int const glf90w_mouse_button_7;
extern int const glf90w_mouse_button_8;
extern int const glf90w_mouse_button_last;
extern int const glf90w_mouse_button_left;
extern int const glf90w_mouse_button_right;
extern int const glf90w_mouse_button_middle;
extern int const glf90w_joystick_1;
extern int const glf90w_joystick_2;
extern int const glf90w_joystick_3;
extern int const glf90w_joystick_4;
extern int const glf90w_joystick_5;
extern int const glf90w_joystick_6;
extern int const glf90w_joystick_7;
extern int const glf90w_joystick_8;
extern int const glf90w_joystick_9;
extern int const glf90w_joystick_10;
extern int const glf90w_joystick_11;
extern int const glf90w_joystick_12;
extern int const glf90w_joystick_13;
extern int const glf90w_joystick_14;
extern int const glf90w_joystick_15;
extern int const glf90w_joystick_16;
extern int const glf90w_joystick_last;
extern int const glf90w_gamepad_button_a;
extern int const glf90w_gamepad_button_b;
extern int const glf90w_gamepad_button_x;
extern int const glf90w_gamepad_button_y;
extern int const glf90w_gamepad_button_left_bumper;
extern int const glf90w_gamepad_button_right_bumper;
extern int const glf90w_gamepad_button_back;
extern int const glf90w_gamepad_button_start;
extern int const glf90w_gamepad_button_guide;
extern int const glf90w_gamepad_button_left_thumb;
extern int const glf90w_gamepad_button_right_thumb;
extern int const glf90w_gamepad_button_dpad_up;
extern int const glf90w_gamepad_button_dpad_right;
extern int const glf90w_gamepad_button_dpad_down;
extern int const glf90w_gamepad_button_dpad_left;
extern int const glf90w_gamepad_button_last;
extern int const glf90w_gamepad_button_cross;
extern int const glf90w_gamepad_button_circle;
extern int const glf90w_gamepad_button_square;
extern int const glf90w_gamepad_button_triangle;
extern int const glf90w_gamepad_axis_left_x;
extern int const glf90w_gamepad_axis_left_y;
extern int const glf90w_gamepad_axis_right_x;
extern int const glf90w_gamepad_axis_right_y;
extern int const glf90w_gamepad_axis_left_trigger;
extern int const glf90w_gamepad_axis_right_trigger;
extern int const glf90w_gamepad_axis_last;
extern int const glf90w_no_error;
extern int const glf90w_not_initialized;
extern int const glf90w_no_current_context;
extern int const glf90w_invalid_enum;
extern int const glf90w_invalid_value;
extern int const glf90w_out_of_memory;
extern int const glf90w_api_unavailable;
extern int const glf90w_version_unavailable;
extern int const glf90w_platform_error;
extern int const glf90w_format_unavailable;
extern int const glf90w_no_window_context;
extern int const glf90w_cursor_unavailable;
extern int const glf90w_feature_unavailable;
extern int const glf90w_feature_unimplemented;
extern int const glf90w_platform_unavailable;
extern int const glf90w_focused;
extern int const glf90w_iconified;
extern int const glf90w_resizable;
extern int const glf90w_visible;
extern int const glf90w_decorated;
extern int const glf90w_auto_iconify;
extern int const glf90w_floating;
extern int const glf90w_maximized;
extern int const glf90w_center_cursor;
extern int const glf90w_transparent_framebuffer;
extern int const glf90w_hovered;
extern int const glf90w_focus_on_show;
extern int const glf90w_mouse_passthrough;
extern int const glf90w_position_x;
extern int const glf90w_position_y;
extern int const glf90w_red_bits;
extern int const glf90w_green_bits;
extern int const glf90w_blue_bits;
extern int const glf90w_alpha_bits;
extern int const glf90w_depth_bits;
extern int const glf90w_stencil_bits;
extern int const glf90w_accum_red_bits;
extern int const glf90w_accum_green_bits;
extern int const glf90w_accum_blue_bits;
extern int const glf90w_accum_alpha_bits;
extern int const glf90w_aux_buffers;
extern int const glf90w_stereo;
extern int const glf90w_samples;
extern int const glf90w_srgb_capable;
extern int const glf90w_refresh_rate;
extern int const glf90w_doublebuffer;